--- a/src/page/Home/Home.css
+++ b/src/page/Home/Home.css
@@ -1,4 +1,5 @@
 #home-container {
+  width: 80%;
 }
 
 #home-search {
@@ -6,4 +7,44 @@
   background-color: #040e27;
   color: #fff;
   padding-top: 35px;
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+#btn-search {
+  width: 150px;
+}
+
+#popular-dest,
+#popular-places {
+  margin-top: 50px;
+  width: 100%;
+  text-align: center;
+}
+
+.g-4 {
+  width: 100%;
+  margin: 0 auto;
+}
+#btn-more {
+  width: 10%;
+  margin: 20px auto;
+}
+
+#subscribe {
+  margin-top: 50px;
+  width: 100%;
+  text-align: center;
+  background-color: #040e27;
+  color: #fff;
+  padding-top: 20px;
+}
+
+#video {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  width: 100%;
+  text-align: center;
+  background-color: #040e27;
 }
