--- a/src/page/Header/Header.css
+++ b/src/page/Header/Header.css
@@ -5,7 +5,7 @@
 }
 
 .link:hover {
-  color: brown;
+  color: #198754;
   background-color: #fff;
   font-weight: 600;
 }
@@ -16,4 +16,7 @@
   padding: 10px;
   font-size: 20px;
   font-weight: 600;
+}
+.link-home:hover {
+  color: #198754;
 }
